# SDTFE

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README  README.md  index.html  objects.inv  pyproject.toml  searchindex.js  setup.py
.github/workflows/: sphinx.yml
_modules/: index.html
_sources/: executables.rst.txt
docs/: conf.py  index.rst  python.rst
docs/_static/css/: custom.css
examples/: add_particle_dtfe_density.py
executables/: index.html
genindex/: index.html
python/: CMakeLists.txt  index.html  pydtfe.cpp
python/pydtfe/: __init__.py
search/: index.html
src/: bitmap.c  bitmap.h  constants.h  dtfe.c  dtfe.h  io.c  io.h  main.c  triangulate.c  triangulate.h  utils.c  utils.h
